# open_swe_test

./: pyproject.toml  test_import.py
src/open_swe_test/: __init__.py  hello_world.py  main.py
