[project]
name = "open-swe-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Devilfish281",email = "Dobley@csu.fullerton.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "open_swe_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
