[project]
name = "open-swe-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Devilfish281",email = "Dobley@csu.fullerton.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "sphinx (>=8.2.3,<9.0.0)"
]

[tool.poetry]
packages = [{include = "open_swe_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
